# Machine_Failure_Prediction

./: Dockerfile  FastAPI_Explanation.docx  Important _Links_AWS_Lambda.docx  Important_Links.rtf  Machine_Failure_Prediction.ipynb  Machine_Failure_Prediction.py  README.md  lambda_function.py  machine_failure_prediction.pkl  main.py  pyproject.toml  test_model.py  validate_server.py  ~$portant _Links_AWS_Lambda.docx
.ipynb_checkpoints/: Machine_Failure_Prediction-checkpoint.ipynb  Predicting_Machine_Failure-checkpoint.ipynb
